# final-prj

./: Baxter Mount v1.SLDPRT  BaxterMount V2.SLDPRT  Chopstick(extension).SLDPRT  Chopstick(extension).leftSLDPRT.SLDPRT  Chopsticks.SLDPRT  Chopsticks_Assembly.SLDASM  Chopsticks_v4.SLDPRT  README.md  Thread Test for Baxter.SLDPRT
group_work/: CMakeLists.txt  package.xml  readme.md
group_work/launch/: main.launch  master.launch
group_work/src/: Sawyer_Mount_Real.STL  allegro_node_torque.cpp  allegro_node_torque.h  close_to_open.py  my_robot.xacro  open_to_close.py  open_to_close_with_michelles_changes.py  reset.py  saved positions.txt
lab4_cam/: README.md  package.xml
lab4_cam/launch/: ar_track.launch  nominal.launch  sawyer_wrist_track.launch
lab4_cam/src/: both_sawyer_cams.py  trans_webcam_to_base.py  webcam_calibration
move_arm/: CMakeLists.txt  package.xml  readme.md
move_arm/src/: ik_example.py  ik_example_2.py  suphakorn.py  transforms.py
planning/: README.md  package.xml
planning/launch/: arm_stroke.launch  package.xml  sawyer_inverse.launch
planning/src/: AR_tag_pathtest.py  AR_tag_pathtest_goal2.py  action_client.py  controller.py  path_test.py  planner.py
sawyer_head_cam/: CMakeLists.txt  package.xml  readme.md
sawyer_head_cam/src/: sawyer_head_cam_node.py
segmentation/src/: image_segmentation.py  main.py  pointcloud_segmentation.py  thresholding.py
